pandoc-citeproc (0.11.1.1)

  * Added containers to build deps for test-pandoc-citeproc.
  * Fix titlecase when a colon is inside an emph (#301).
  * Titlecasing: never lowercase anything except stop words (#301).
  * Text.CSL.Compat.Pandoc: disable `bracketed_spans` extension.
    We want to stay compatible with CSL standards, which understand a span
    tag but not the brackets.
  * Titlecase transform: start new sentence after ".".  "Foo bar. An essay."
  * Use set for short words lookup (performance).
  * Case transform:  recognize mixed upper+punct as all uppercase (#301).
    This helps with things like "N.R. Kerr".
  * Add 'static' Cabal flag.

pandoc-citeproc (0.11.1)

 * Don't produce ??? with empty suppress-author citation (#156).
 * Added Typeable, Data instances for CiteprocException. This
   is needed for some older ghc versions.

pandoc-citeproc (0.11)

  * Add Text.CSL.Exception module exporting CiteprocException [API change].
  * Throw CiteprocExceptions instead of crashing with 'error'.  This
    should lead to better error messages in pandoc when pandoc-citeproc fails.
  * Compat.Pandoc: support for pandoc 2.0 API with Text instead of String.
  * Text.CSL.Input.Bibtex - revise item parser for better error messages.
    This should give us better messages when someone uses a bad character
    in a citation key.
  * Use defConfig from aeson-pretty.  Otherwise we get an error with newer
    versions, which added a field to the Config record.
  * Removed old hsb2hs-specific stuff from Setup.hs.

pandoc-citeproc (0.10.5.1)

  * Minor tweaks for clean CI builds.
  * Require recent yaml for uniform test output.

pandoc-citeproc (0.10.5)

  * Use file-embed instead of hsb2hs for embed_data_files flag (#285).
  * Allow `&` in bibtex keys (#289).  They are discouraged because of
    problems in tables, but technically they are allowed.
  * Allow + in bibtex field name (#290).  BibLaTeX now allows things like