@@ -9,18 +9,19 @@ packages:
 - '.'
 - location:
     git: https://github.com/jgm/pandoc.git
-    commit: aad9288f97ed8b662c16764cc2ebc404fead4a11
+    commit: 47e2719cc3e18a6216c886b8ab7166f48bfe457f
   extra-dep: true
 extra-deps:
 - texmath-0.9.4.2
-- hslua-0.8.0
-- skylighting-0.4.1
+- hslua-0.9.2
+- skylighting-0.4.2
 - cmark-gfm-0.1.1
 - QuickCheck-2.10.0.1
 - tasty-quickcheck-0.9.1
+- doctemplates-0.2.1
 - haddock-library-1.4.3
 - pandoc-types-1.17.2
 # needed for now:
 - hs-bibutils-6.2.0.1
 - rfc5051-0.1.0.3
-resolver: lts-9.1
+resolver: lts-9.9
